package classroomreservation;

public class AuthenticationService {
    public boolean authenticate(User user, String account, String password) {
        return false;
    }

    public boolean updatePassword(User user, String newPassword) {
        return false;
    }
}
