package classroomreservation;

public class ClassroomManagementService {
    public ClassroomManagementRecord createClassroom(Administrator operator, Classroom classroom) {
        return null;
    }

    public ClassroomManagementRecord disableClassroom(Administrator operator, Classroom classroom) {
        return null;
    }

    public ClassroomManagementRecord assignTimeSlot(Administrator operator, Classroom classroom, ClassroomTimeSlot timeSlot) {
        return null;
    }
}
