package classroomreservation;

public class Reservation {
    private String reservationId;
    private String purpose;
    private String reservationStatus;
    private TeacherStudentUser applicant;
    private Classroom classroom;
    private ClassroomTimeSlot classroomTimeSlot;

    public void confirm() {
    }

    public void cancel() {
    }
}
