package classroomreservation;

public class ReservationService {
    public Classroom[] queryAvailableClassrooms() {
        return null;
    }

    public Reservation createReservation(TeacherStudentUser user, Classroom classroom, ClassroomTimeSlot timeSlot, String purpose) {
        return null;
    }

    public boolean cancelReservation(Reservation reservation) {
        return false;
    }

    public Reservation[] queryReservations() {
        return null;
    }
}
