package classroomreservation;

public class UserManagementService {
    public UserManagementRecord createUser(Administrator operator, TeacherStudentUser userInfo) {
        return null;
    }

    public UserManagementRecord disableUser(Administrator operator, TeacherStudentUser user) {
        return null;
    }

    public boolean validateUser(User user) {
        return false;
    }
}
